infra/kubernetes/monitoring/05-kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: agrotech
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kafka.interglobaltecnologia.com.br
    secretName: kafka-ui-tls
  rules:
  - host: kafka.interglobaltecnologia.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-svc
            port:
              number: 80
